tests/expectations/compiler/finalize/increment_fail.out
Error [ETYC0372005]: Unknown function `test.aleo/increment`
    --> compiler-test:12:5
     |
  12 |     increment(amounts, addr, amount);
     |     ^^^^^^^^^
